--- a/testingEdges.html
+++ b/testingEdges.html
@@ -51,12 +51,27 @@
     </div>
     <script>
 
- 	  var camLocs = new Array(1)
+      //global variables
+ 	  var speedCameras = []
+ 	  speedCameras.length = 2
+ 	  var redLightCameras = []
+ 	  redLightCameras.length = 1
  	  var map
+
+ 	  var originLocation = '5300 S Greenwood Ave'
+ 	  var destinationLocation = '6031 S Ellis Ave Chicago'
 
  	  //badly named function, here  is where we could add the array of speed cameras
  	  function defineStuff() {
- 	  	camLocs[0] = new google.maps.LatLng({lat: 41.793492645896656, lng: -87.6118759701359}); //example speed camera in Washington Park
+ 	  	//speed cameras
+ 	  	speedCameras[0] = new google.maps.LatLng({lat: 41.793492645896656, lng: -87.6118759701359});
+ 	  	speedCameras[1] = new google.maps.LatLng({lat: 41.79770388561477, lng: -87.60644477865196});
+ 	  	//example speed cameras in Washington Park and Cottage Grove
+
+ 	  	//red light cameras
+ 	  	redLightCameras[0] = new google.maps.LatLng({lat: 41.77334, lng: -87.586295});
+
+ 	  	//creating the map
  	  	map = new google.maps.Map(document.getElementById('map'), {
           zoom: 4,
           center: {lat: 41.8781, lng: -87.6298}  // Chicago starting location
@@ -67,7 +82,14 @@
 
       function initMap() {
       	defineStuff();
-        marker = new google.maps.Marker({position: camLocs[0], map: map}); //add the speed camera to the map (visually helpful)
+
+      	//to do: don't add cameras to the map unless they are along the route
+      	for (i=0; i<speedCameras.length; i++) {
+        	marker = new google.maps.Marker({position: speedCameras[i], map: map}); //add the speed camera to the map (visually helpful)
+      	}
+      	for (i=0; i<redLightCameras.length; i++) {
+        	marker = new google.maps.Marker({position: redLightCameras[i], map: map}); //add the red light camera to the map (visually helpful)
+      	}
 
         var directionsService = new google.maps.DirectionsService;
         var directionsDisplay = new google.maps.DirectionsRenderer({
@@ -80,9 +102,10 @@
           computeTotalDistance(directionsDisplay.getDirections());
         });
 
-        displayRoute('5300 S Greenwood Ave', '6031 S Ellis Ave Chicago', directionsService, //two addresses in hyde park
+        displayRoute(originLocation, destinationLocation, directionsService, //two addresses in hyde park
             directionsDisplay);
       };
+
 
       function displayRoute(origin, destination, service, display) {
         service.route({
@@ -100,16 +123,32 @@
         });
       };
 
-      function checkOnEdge(cam, pathRoute) {
+
+      function checkCameras(cameraArray, pathRoute, cameraType) {
       	  polylineRoute = new google.maps.Polyline({path: pathRoute})
+      	  camerasPassed = 0
+      	  for (i=0; i<cameraArray.length; i++){
+      	  	if (checkIfOnEdge(cameraArray[i],polylineRoute)) {
+      	  		camerasPassed++
+      	  	}
+      	  }
+      	  if (camerasPassed==0) {
+      	  	console.log("You won't pass any "+ cameraType + " cameras")
+      	  }
+      	  else if (camerasPassed==1) {
+      	  	console.log("You will pass 1 "+ cameraType + " camera");
+      	  }
+      	  else {
+      	  	console.log("You will pass " + camerasPassed + " " + cameraType + " cameras")
+      	  }
+      	  return camerasPassed
+      }
 
+      function checkIfOnEdge(cam, polylineRoute) {
       	  isOnEdge = google.maps.geometry.poly.isLocationOnEdge(cam, polylineRoute, 0.001)
+          return isOnEdge
+      }; 
 
-          console.log(isOnEdge)
-          if (isOnEdge){
-          	alert("You will pass the speed camera")
-          }
-      };
 
       function computeTotalDistance(result) {
         var total = 0;
@@ -120,9 +159,11 @@
         total = total / 1000;
         document.getElementById('total').innerHTML = total + ' km';
 
-        firstCam = camLocs[0]
         pathRoute = result.routes[0].overview_path
-		checkOnEdge(firstCam,pathRoute)
+
+        checkCameras(speedCameras,pathRoute,"speed")
+        checkCameras(redLightCameras,pathRoute,"red light")
+
       }
     </script>
     <script async defer
