working on timing

--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@
     </div>
     <div id="map"></div>
     <div id="summary">
-        <p>Red Lights Passed<span id="red-lights"></span></p>
-        <p>Speed Traps Passed<span id="speed-traps"></span></p>
-        <p>Total Cost<span id="total"></span></p>
+        <p>You could speed through as many as <span id="red-lights">0</span> red light cameras.</p>
+        <p>You could speed past <span id="speed-traps">0</span> speed cameras.</p>
+        <p>You could owe $<span id="total">0</span> from driving so recklessly.</p>
     </div>
 </body>
 </html>
