overlay text on sign

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             <h2>Here's your trip details...</h2>
             <br />
             <div class="flex-row">
-                <img src="speed_limit.svg" class="icon"/>
+                <img src="speed_limit.svg" class="icon" style="position:relative;"/><p class="target" id="speed-amount" style="position: relative; top:30px; left:-105px; text-align:left; font-size:60px;">0</p>
                 <p>If you drive <input type="number" id="speed-amount" min="0" max="50" step="5" value="25">miles per hour over the speed limit...</p>
             </div>
             <div class="flex-row">
