runs the init function to reset the map when you go back

--- a/index.html
+++ b/index.html
@@ -461,6 +461,7 @@
 
       function goBack() {
         var elem = document.getElementById("myAnimation");
+        initMap()
         $(elem).removeClass("clicked");
 
         //Change 
