Fixed geolocate function

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="jquery-3.1.1.js"></script>
     <script>
         function initMap(){
-            /*function geolocate() {
+            function geolocate() {
                 if (navigator.geolocation) {
                     navigator.geolocation.getCurrentPosition(function(position) {
                     var geolocation = {
@@ -20,8 +20,8 @@
                     });
                     autocomplete.setBounds(circle.getBounds());
                 });
-                }
-            }*/
+            }
+                
             var SPEED = 100;
             var RED = 100;
             var styles = [
